--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,7 @@
     "react-router-dom": "^6.26.2",
     "react-hot-toast": "^2.4.1",
     "socket.io-client": "^4.7.2",
-    "zustand": "^4.5.2"
-  },
-  "devDependencies": {
+    "zustand": "^4.5.2",
     "@vitejs/plugin-react": "^4.3.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
